<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".DietQuiz"
    android:columnCount="1"
    android:useDefaultMargins="true">

    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/quizStats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|center_horizontal"
        android:text="@string/see_stats_here"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonTrue"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/True"
        android:textColor="#ffffff" />


    <Button
        android:id="@+id/buttonFalse"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/False"
        android:textColor="#ffffff" />
</GridLayout>