<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".BenedictHarris"
    android:columnCount="2"
    android:useDefaultMargins="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/heightEditText"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="6"
        android:ems="10"
        android:layout_columnSpan="2"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="253dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/weightEditText"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="6"
        android:ems="10"
        android:layout_columnSpan="2"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="146dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/ageEditText"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="6"
        android:ems="10"
        android:layout_columnSpan="2"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="198dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="198dp"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/genderSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="75dp"
        tools:ignore="MissingConstraints" />
</GridLayout>