<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:columnCount="2"
    android:useDefaultMargins="true">

    <Button
        android:id="@+id/bmiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="48dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/benedictHarris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbh"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="136dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipes"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="235dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="114dp"
        android:layout_height="143dp"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="365dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="Star" />

</GridLayout>